--- a/Animated Character/index.html
+++ b/Animated Character/index.html
@@ -1,1 +1,26 @@
+#In this HTML file basics animated character tags and classes are define
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Dancing cat</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="face">
+            <div class="left-ear"></div>
+            <div class="right-ear"></div>
+        </div>
+        <div class="hand-left"></div>
+        <div class="hand-right"></div>
+        <div class="leg-left"></div>
+        <div class="leg-right"></div>
+        <div class="music-note"></div>
+    </div>
+    
+</body>
+</html>
